third_party/move/move-compiler-v2/tests/folding/bad_type_argument_arity_const.exp

Diagnostics:
error: expected 1 type argument but 0 were provided
  ┌─ tests/folding/bad_type_argument_arity_const.move:6:15
  │
6 │     const S1: S = S { f: 0 };
  │               ^

error: Not a valid constant expression.
  ┌─ tests/folding/bad_type_argument_arity_const.move:6:19
  │
6 │     const S1: S = S { f: 0 };
  │                   ^^^^^^^^^^
  │                   │
  │                   Invalid call or operation in constant

error: Invalid type for constant
  ┌─ tests/folding/bad_type_argument_arity_const.move:6:19
  │
6 │     const S1: S = S { f: 0 };
  │     --------------^^^^^^^^^^-
  │     │
  │     Expected one of `u8`, `u16, `u32`, `u64`, `u128`, `u256`, `i64`, `i128`, `bool`, `address`, or `vector<_>` with valid element type.

error: expected 1 type argument but 0 were provided
  ┌─ tests/folding/bad_type_argument_arity_const.move:7:15
  │
7 │     const S2: S<> = S { f: 0 };
  │               ^

error: Not a valid constant expression.
  ┌─ tests/folding/bad_type_argument_arity_const.move:7:21
  │
7 │     const S2: S<> = S { f: 0 };
  │                     ^^^^^^^^^^
  │                     │
  │                     Invalid call or operation in constant

error: Invalid type for constant
  ┌─ tests/folding/bad_type_argument_arity_const.move:7:21
  │
7 │     const S2: S<> = S { f: 0 };
  │     ----------------^^^^^^^^^^-
  │     │
  │     Expected one of `u8`, `u16, `u32`, `u64`, `u128`, `u256`, `i64`, `i128`, `bool`, `address`, or `vector<_>` with valid element type.

error: expected 1 type argument but 2 were provided
  ┌─ tests/folding/bad_type_argument_arity_const.move:8:15
  │
8 │     const S3: S<u64, bool> = S { f: 0 };
  │               ^

error: Not a valid constant expression.
  ┌─ tests/folding/bad_type_argument_arity_const.move:8:30
  │
8 │     const S3: S<u64, bool> = S { f: 0 };
  │                              ^^^^^^^^^^
  │                              │
  │                              Invalid call or operation in constant

error: Invalid type for constant
  ┌─ tests/folding/bad_type_argument_arity_const.move:8:30
  │
8 │     const S3: S<u64, bool> = S { f: 0 };
  │     -------------------------^^^^^^^^^^-
  │     │
  │     Expected one of `u8`, `u16, `u32`, `u64`, `u128`, `u256`, `i64`, `i128`, `bool`, `address`, or `vector<_>` with valid element type.

error: expected 1 type argument but 2 were provided
  ┌─ tests/folding/bad_type_argument_arity_const.move:9:17
  │
9 │     const S4: S<S<u64, bool>> = S { f: S { f: 0 } };
  │                 ^

error: Not a valid constant expression.
  ┌─ tests/folding/bad_type_argument_arity_const.move:9:33
  │
9 │     const S4: S<S<u64, bool>> = S { f: S { f: 0 } };
  │                                 ^^^^^^^^^^^^^^^^^^^
  │                                 │      │
  │                                 │      Invalid call or operation in constant
  │                                 Invalid call or operation in constant

error: Invalid type for constant
  ┌─ tests/folding/bad_type_argument_arity_const.move:9:33
  │
9 │     const S4: S<S<u64, bool>> = S { f: S { f: 0 } };
  │     ----------------------------^^^^^^^^^^^^^^^^^^^-
  │     │
  │     Expected one of `u8`, `u16, `u32`, `u64`, `u128`, `u256`, `i64`, `i128`, `bool`, `address`, or `vector<_>` with valid element type.
